changed hover and text color

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
         <div class="data-table">
             <div class="search">
                 <h2>COVID19 TRACKER</h2>
-                <input type="text" id="search-icon">
+                <div class="search-bar">
+                    <input type="text" id="search-icon">
+                <button>SEARCH</button>
+                </div>
+                
             </div>
             <div class="virus-icon">
                 <img src="./icons/virus.svg" alt="virus image">
