hid search bar on desktop view

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
           />
           <h2>COVID19 TRACKER</h2>
         </div>
-        <div class="search-bar">
+        <!-- <div class="search-bar">
             <input type="text" id="search-icon" />
             <button>SEARCH</button>
-        </div> <br>
+        </div> <br> -->
         <div class="search-bar-none">
             <input type="text" id="search-icon" />
             <button>SEARCH</button>
