--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@
           />
           <h2>COVID19 TRACKER</h2>
         </div>
-        <!-- <div class="search-bar">
-            <input type="text" id="search-icon" />
-            <button>SEARCH</button>
-        </div> <br> -->
         <div class="search-bar-none">
             <input type="text" id="search-icon" />
             <button>SEARCH</button>
-        </div>
+        </div> <br>
+        <div class="search-bar">
+            <input type="text" id="search-icon" />
+            <button>SEARCH</button>
+        </div> 
+        
       </div>
       <div class="virus-icon">
         <img src="./icons/virus.svg" alt="virus image" />
